--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "testFile": "node dist/tests/test.js",
-    "test": "npm run build && npm run testFile",
+    "testFile": "node dist/tests/run.js",
+    "test": "npm run build && mocha dist/tests/run.js --exit",
     "build": "rm -rf ./dist && tsc",
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start"
@@ -21,9 +21,14 @@
   },
   "homepage": "https://github.com/m-yal/mvc-books-library#readme",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "@types/mocha": "^9.1.1",
+    "@types/supertest": "^2.0.12",
+    "mocha": "^10.0.0",
+    "supertest": "^6.2.4"
   }
 }
