--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/m-yal/mvc-books-library#readme",
   "dependencies": {
+    "assert": "^2.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1"
   },
