--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "assert": "^2.0.0",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/mocha": "^9.1.1",
+    "@types/mysql": "^2.15.21",
     "@types/supertest": "^2.0.12",
     "mocha": "^10.0.0",
     "supertest": "^6.2.4"
