--- a/package.json
+++ b/package.json
@@ -22,15 +22,25 @@
   "homepage": "https://github.com/m-yal/mvc-books-library#readme",
   "dependencies": {
     "assert": "^2.0.0",
+    "auth": "0.0.9",
+    "basic": "^2.0.3",
+    "basic-auth": "^2.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "express-basic-auth": "^1.2.1",
+    "express-session": "^1.17.3",
+    "mysql": "^2.18.1",
+    "session-file-store": "^1.5.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/mocha": "^9.1.1",
     "@types/mysql": "^2.15.21",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "mocha": "^10.0.0",
     "supertest": "^6.2.4"
   }
