--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "basic": "^2.0.3",
     "basic-auth": "^2.0.1",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
