--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "session-file-store": "^1.5.0",
     "uuid": "^9.0.0"
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/mocha": "^9.1.1",
+    "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
