--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "migration-v1:up": "npm run build && node dist/models/v1/sql-scripts/create-tables.js",
     "migration-v1:down": "npm run build && node dist/models/v1/sql-scripts/delete-all.js",
     "migration-v2:up": "npm run build && ",
-    "migration-v2:down": "npm run build && "
+    "migration-v2:down": "npm run build && ",
+    "delete-hard-v1": "npm run build && node dist/models/v1/sql-scripts/delete-hard.js"
   },
   "repository": {
     "type": "git",
