--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start",
     "migration-v1:up": "npm run build && node dist/models/v1/sql-scripts/create-tables.js",
-    "migration-v1:down": "npm run build && node dist/models/v1/sql-scripts/delete-all.js",
-    "migration-v2:up": "npm run build && ",
-    "migration-v2:down": "npm run build && ",
-    "delete-hard-v1": "npm run build && node dist/models/v1/sql-scripts/delete-hard.js"
+    "migration-v1:down": "npm run build && node dist/models/v1/sql-scripts/delete-all-tables.js",
+    "delete-hard-v1": "npm run build && node dist/models/v1/sql-scripts/delete-hard.js",
+    "migration-v2:up": "npm run build && node dist/models/v1/sql-scripts/migrate-to-v2.js",
+    "migration-v2:down": "npm run build && node dist/models/v1/sql-scripts/migrate-back-to-v1.js",
+    "delete-hard-v2": "npm run build && node dist/models/v2/sql-scripts/delete-hard.js"
   },
   "repository": {
     "type": "git",
