--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "session-file-store": "^1.5.0",
     "uuid": "^9.0.0"
   },
@@ -51,6 +52,7 @@
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "mocha": "^10.0.0",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "typescript": "^4.8.4"
   }
 }
