--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "homepage": "https://github.com/m-yal/mvc-books-library#readme",
   "dependencies": {
     "assert": "^2.0.0",
-    "auth": "0.0.9",
+    "auth": "^0.0.1",
     "basic": "^2.0.3",
     "basic-auth": "^2.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -41,10 +42,12 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "session-file-store": "^1.5.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/mocha": "^9.1.1",
@@ -52,6 +55,7 @@
     "@types/mysql": "^2.15.21",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.7.9",
     "mocha": "^10.0.0",
     "supertest": "^6.2.4",
     "typescript": "^4.8.4"
