--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   },
   "homepage": "https://github.com/m-yal/mvc-books-library#readme",
   "dependencies": {
+    "@types/node": "^18.11.6",
     "assert": "^2.0.0",
     "auth": "^0.0.1",
     "basic": "^2.0.3",
     "basic-auth": "^2.0.1",
+    "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
@@ -41,18 +43,23 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "mysqldump": "^3.2.0",
+    "node-cron": "^3.0.2",
     "session-file-store": "^1.5.0",
+    "tiny-csrf": "^1.1.3",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/basic-auth": "^1.1.3",
+    "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/mocha": "^9.1.1",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
+    "@types/node-cron": "^3.0.4",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.9",
